--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@p5-wrapper/react": "^4.4.0",
+    "@uidotdev/usehooks": "^2.4.1",
+    "gsap": "^3.12.5",
+    "next": "14.2.3",
+    "openai": "^4.38.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-spinners": "^0.13.8",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
