--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.12.5",
     "next": "14.2.3",
     "openai": "^4.38.5",
+    "prodia": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-spinners": "^0.13.8",
